# Selenium4XPytest

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Jenkinsfile  README.md  conftest.py  main_test.py  pyproject.toml  pytest.ini  pytest.jenkins.ini  pytest_hooks.py  requirements.txt  utils.py
actors/: base_user.py
api_comp/: __init__.py  booking.py
browsers_config/: __init__.py  chrome.py  edge.py  firefox.py
features_test/: api_test.py
selenium_pytest_jenkins_allure/: env_configurator.py  pytest_hooks.py  utils.py
selenium_pytest_jenkins_allure/actors/: __init__.py  base_user.py  unassigned_user.py
selenium_pytest_jenkins_allure/api_comp/: booking.py
selenium_pytest_jenkins_allure/browsers_config/: chrome.py  edge.py  firefox.py
selenium_pytest_jenkins_allure/test/: api_test.py  ui_test.py
selenium_pytest_jenkins_allure/ui_comp/: search_bar.py  video_list.py
ui_comp/: __init__.py  base_comp.py  coockies_pop_up.py  cookies_pop_up.py  search_bar.py  video_list.py
