[tool.poetry]
name = "selenium_pytest_jenkins_allure"
version = "0.1.0"
description = "Training for setting up a complete automation project, Using Pytest, Selenium, Jenkins and Allure"
authors = ["Viacheslav <vacheslavuslistyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
